services/angelos/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: messages-basic-auth
  namespace: microservices
spec:
  basicAuth:
    secret: messages-auth-secret
