services/angelos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angelos
  namespace: microservices
  labels:
    app: angelos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angelos
  template:
    metadata:
      labels:
        app: angelos
    spec:
      containers:
      - name: angelos
        image: ghcr.io/vimalmenon/micro-army/angelos
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
