services/angelos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angelos
  namespace: microservices
  labels:
    app: angelos
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: angelos
