services/angelos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messages
  namespace: microservices
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: messages.homelab.local
      http:
        paths:
          - backend:
              service:
                name: angelos
                port:
                  number: 8000
            path: /
            pathType: Prefix
    - host: messages.completeautomate.com
      http:
        paths:
          - backend:
              service:
                name: angelos
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - messages.homelab.local
        - messages.completeautomate.com
